@@ -821,48 +821,54 @@ Each elements are regexp of field-name.")
 ;;; @@@ entity presentation
 ;;;
 
+(defun mime-display-insert-text-content (entity)
+  (condition-case signal
+      (progn (mime-insert-text-content entity)
+	     (run-hooks 'mime-text-decode-hook)
+	     t)
+    (error   (let ((point (point)))
+	       (insert (format "This entity can't be decoded.  %s"
+			       (or (cadr signal) "")))
+	       (add-text-properties point (point) '(face highlight)))
+	     (insert "\nHere is original data.\n\n")
+	     (mime-insert-entity-body entity)
+	     nil)))
+
 (defun mime-display-text/plain (entity situation)
   (save-restriction
     (narrow-to-region (point-max)(point-max))
-    (condition-case nil
-	(mime-insert-text-content entity)
-      (error (progn
-	       (message "Can't decode current entity.")
-	       (sit-for 1))))
-    (run-hooks 'mime-text-decode-hook)
-    (goto-char (point-max))
-    (if (not (eq (char-after (1- (point))) ?\n))
-	(insert "\n")
-      )
-    (if (and mime-preview-fill-flowed-text
-	     (equal (cdr (assoc "format" situation)) "flowed"))
-	(if mime-preview-fill-flowed-text-delsp
-	    (fill-flowed nil (equal (cdr (assoc "delsp" situation)) "yes"))
-	  (fill-flowed))
-      )
-    (mime-add-url-buttons)
-    (run-hooks 'mime-display-text/plain-hook)
-    ))
+    (when (mime-display-insert-text-content entity)
+      (goto-char (point-max))
+      (if (not (eq (char-after (1- (point))) ?\n))
+	  (insert "\n")
+	)
+      (if (and mime-preview-fill-flowed-text
+	       (equal (cdr (assoc "format" situation)) "flowed"))
+	  (if mime-preview-fill-flowed-text-delsp
+	      (fill-flowed nil (equal (cdr (assoc "delsp" situation)) "yes"))
+	    (fill-flowed))
+	)
+      (mime-add-url-buttons)
+      (run-hooks 'mime-display-text/plain-hook)
+      )))
 
 (defun mime-display-text/richtext (entity situation)
   (save-restriction
     (narrow-to-region (point-max)(point-max))
-    (mime-insert-text-content entity)
-    (run-hooks 'mime-text-decode-hook)
-    (let ((beg (point-min)))
-      (remove-text-properties beg (point-max) '(face nil))
-      (richtext-decode beg (point-max))
-      )))
+    (when (mime-display-insert-text-content entity)
+      (let ((beg (point-min)))
+	(remove-text-properties beg (point-max) '(face nil))
+	(richtext-decode beg (point-max))
+	))))
 
 (defun mime-display-text/enriched (entity situation)
   (save-restriction
     (narrow-to-region (point-max)(point-max))
-    (mime-insert-text-content entity)
-    (run-hooks 'mime-text-decode-hook)
-    (let ((beg (point-min)))
-      (remove-text-properties beg (point-max) '(face nil))
-      (enriched-decode beg (point-max))
-      )))
+    (when (mime-display-insert-text-content entity)
+      (let ((beg (point-min)))
+	(remove-text-properties beg (point-max) '(face nil))
+	(enriched-decode beg (point-max))
+	))))
 
 
 (defvar mime-view-announcement-for-message/partial
